# vramcalc

./: README.md  pyproject.toml
data/measurements/: vllm_measurements.csv
scripts/: collect_vllm_measurements.py
tests/: test_hf_resolve.py  test_units.py  test_vllm_estimator.py  test_vllm_regression_dataset.py
vramcalc/: cli.py
vramcalc/core/: types.py  units.py
vramcalc/hf/: resolve.py
vramcalc/runtimes/: base.py  registry.py
vramcalc/runtimes/vllm/: estimator.py
